<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

 <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_your_destination"
        tools:context=".WriteDestination" >
    </TextView>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginTop="20sp" >
        
       	<!-- <EditText
            android:id="@+id/edit_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/destination_1" />  -->
		
		<Spinner
  			android:id="@+id/addresslist"
  			android:layout_height="60dp"
  			android:layout_width="fill_parent"
  			tools:context=".WriteDestination" />
		
		<ImageView 
		    android:id="@+id/myImageView"
		    android:contentDescription="@string/city"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
		
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/button_custom4"
            android:text="@string/destination" />
        
        <!-- <ListView android:id="@+id/listviewresultid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/destination_3"/> -->
            
    </LinearLayout>

</RelativeLayout>
